# RPIPicoFreeRTOSCourseDEGOUL

./: README.md
10_final/chapter6/: CounterAgent.cpp  CounterAgent.h  main.cpp  readmechapter6final.txt
10_final/chapter7/: CMakeLists.txt  CounterAgent.cpp  CounterAgent.h  main.cpp  readmechapter7final.txt
10_final/chapter8/: CMakeLists.txt  CounterAgent.cpp  CounterAgent.h  main.cpp  readmechapter8final.txt
2-PicoSetup/BlinkLEDExt/src/: main.cpp
4-Tasks/BlinkAssignment/src/: main.cpp  readmeAssignment.txt
4-Tasks/BlinkExt/: CMakeLists.txt
4-Tasks/BlinkExt/src/: main.cpp  readmeExt.txt
4-Tasks/BlinkPriority/src/: main.cpp  readmePriority.txt
4-Tasks/MultiBlink/src/: main.cpp  readmemulti.txt
5-Semaphore/LimitWorkers/src/: main.cpp  readmelimitworkers.txt
6-Queue/AssignmentQueue/src/: main.cpp  readmeassignmentQueue.txt
6-Queue/CountLed/src/: readmecountled.txt
7-MessageBuf/SerialCmds/: readmeserialcmd.txt
7-MessageBuf/SerialCmds/src/: main.cpp
8-Multicore/FreeRTOSSMP/src/: freeRTOSSMPreadme.txt
9/: CMakeLists.txt
9/port/FreeRTOS-Kernel/: freertos_unit.cmake
9/src/: CMakeLists.txt  LogAgentA.cpp  LogAgentA.h  LogAgentB.cpp  LogAgentB.h  Loggingreadme.txt  main.cpp
